# depush

./: .gitignore  Dockerfile.ssh-server  README.md  config.yaml.example  depush.py  docker-compose.yml  generate_test_keys.sh  pyproject.toml  pytest.ini  test_depush.py
src/depush/: __main__.py  depush.py
tests/: test_depush.py
