[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depush"
version = "0.1.0"
description = "Deploy a versioned codebase to S3/MinIO, SSH, or a local directory"
authors = [
    { name = "Zachary Lefin"}
]
urls = { Homepage = "https://github.com/zalefin/depush" }
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
dependencies = [
    "boto3>=1.42.69",
    "paramiko>=4.0.0",
    "pathspec>=1.0.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
depush = "depush.depush:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/depush"]

